Fixes search result actions not showing up in Chrome.

--- a/tool-ui/src/main/webapp/style/v3/search.less
+++ b/tool-ui/src/main/webapp/style/v3/search.less
@@ -7,6 +7,7 @@
 }
 
 .searchResult-view {
+  overflow: hidden;
   position: relative;
 }
 
